# udp_bridge

./: .gitignore  README.md  UDP_dummy.py  package.xml  setup.cfg  setup.py
udp_bridge/: UDP_dummy.py  udp_manager_node.py  udp_receiver_node.py
udp_bridge/launch/: udp_receipt.launch.py
udp_bridge/others/: exp_data_record.sh
