<?xml version="1.0"?>
<package format="3">
  <name>udp_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 node that receives binary UDP datagrams and publishes them.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
 
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
 
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
 